Added tweet feature with temporary text.

--- a/popup.html
+++ b/popup.html
@@ -29,9 +29,11 @@
 </head>
 
 <body>
-  <h1><span id="malep"></span>% male presence <p>vs<p> <span id="femalep"></span>% female presence</h1>
-  <div id="share">
-    <button type="button">Tweet this</button>
+  <div id="stats">
+    <h1><span id="malep"></span>% male presence <p>vs<p> <span id="femalep"></span>% female presence</h1>
+    <div id="tweet-button">
+      <a class="twitter-share-button" href="" >Tweet</a>
+    </div>
   </div>
 </body>
 <script type='text/javascript' src='popup.js'></script>
