--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-  <title>[sheChromeExtension]</title>
+  <title>Make it She</title>
   <style type="text/css">
     body {
       margin: 10px;
