--- a/popup.html
+++ b/popup.html
@@ -35,6 +35,9 @@
       <a class="twitter-share-button" href="" >Tweet</a>
     </div>
   </div>
+  <div id="off">
+    <h1>Content restored.</h1>
+  </div>
 </body>
 <script type='text/javascript' src='popup.js'></script>
 
